added the footer components to the layouts

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -14,5 +14,8 @@
    <footer>
     <small>	&#169<span id= "copyrightYear"></span>|All Rights Reserved</small>
     </footer> 
+    <script>
+        document.querySelector('#copyrightYear').textContent=new Date().getFullYear();
+    </script>
 </body>
 </html>
