--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,8 @@ export interface Props {
 }
 
 const { title } = Astro.props;
+
+import footer from "../components/footer.astro;
 ---
 
 <!DOCTYPE html>
