adding the footer to the layouts

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ export interface Props {
 
 const { title } = Astro.props;
 
-import footer from "../components/footer.astro;
+import footer from "../components/footer.astro";
 ---
 
 <!DOCTYPE html>
@@ -22,5 +22,6 @@ import footer from "../components/footer.astro;
   <body class="bg-rose-wood">
     <h1>hello babe</h1>
     <slot />
+    
   </body>
 </html>
