--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,21 +1,79 @@
 ---
-
+import logo from "../assets/black-logo.png";
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   <footer>
-    <small>	&#169<span id= "copyrightYear"></span>|All Rights Reserved</small>
-    </footer> 
-    <script>
-        document.querySelector('#copyrightYear').textContent=new Date().getFullYear();
-    </script>
-</body>
-</html>
+<footer class="bg-sheen-gold flex flex-col py-8">
+  <div class="sm:py-2 flex justify-center flex-col items-center">
+    <div>
+      <img class="w-36 h-14" src={logo} alt="" />
+    </div>
+    <nav class="space-x-7 py-8 text-xs text-rose-wood md:text-lg">
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Menu</a>
+      <a href="">Venue</a>
+      <a href="">Events</a>
+      <a href="">Contact Us</a>
+    </nav>
+  </div>
+  <hr class="w-full bg-space-cadet opacity-25" />
+  <div class="flex flex-row justify-center pt-4 md:justify-around">
+    <small class="text-space-cadet md:text-lg">
+      &#169<span id="copyrightYear"></span>|All Rights Reserved</small
+    >
+
+
+    <div class="flex space-x-7 pl-10 fill-space-cadet justify-center">
+      <svg
+        width="14"
+        height="14"
+        viewBox="0 0 14 14"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M13.6961 6.88686C13.6961 3.15724 10.6726 0.133789 6.94301 0.133789C3.21339 0.133789 0.189941 3.15724 0.189941 6.88686C0.189941 10.2575 2.65943 13.0513 5.88785 13.5579V8.83892H4.1732V6.88686H5.88785V5.39907C5.88785 3.70659 6.89606 2.77171 8.43858 2.77171C9.1772 2.77171 9.95024 2.9036 9.95024 2.9036V4.56549H9.09872C8.25986 4.56549 7.99818 5.08609 7.99818 5.62066V6.88686H9.8711L9.5717 8.83892H7.99818V13.5579C11.2266 13.0513 13.6961 10.2575 13.6961 6.88686Z"
+          fill="#243054"></path>
+      </svg>
+
+      <svg
+        width="14"
+        height="14"
+        viewBox="0 0 14 12"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M4.45519 11.3739C9.5506 11.3739 12.3383 7.15141 12.3383 3.49077C12.3383 3.37206 12.3357 3.25072 12.3304 3.13201C12.8727 2.73983 13.3407 2.25405 13.7124 1.69751C13.2074 1.92222 12.6711 2.06898 12.122 2.13277C12.7002 1.78621 13.1331 1.24178 13.3405 0.600402C12.7966 0.922744 12.2018 1.15013 11.5815 1.27281C11.1636 0.828765 10.6111 0.534757 10.0093 0.436238C9.40757 0.337718 8.79012 0.440176 8.25244 0.727771C7.71475 1.01536 7.28678 1.47208 7.03469 2.0273C6.78261 2.58251 6.72044 3.20531 6.85781 3.79941C5.75647 3.74414 4.67905 3.45804 3.69538 2.95966C2.7117 2.46128 1.84375 1.76174 1.14777 0.906401C0.794041 1.51627 0.685799 2.23795 0.845044 2.92477C1.00429 3.61158 1.41907 4.21199 2.0051 4.60397C1.56515 4.59 1.13483 4.47155 0.74971 4.2584V4.2927C0.749316 4.93271 0.970576 5.55312 1.37588 6.04844C1.78118 6.54377 2.34552 6.88346 2.97295 7.00975C2.5654 7.12126 2.13767 7.1375 1.72284 7.05723C1.89989 7.60765 2.24436 8.08906 2.70818 8.43428C3.172 8.7795 3.73203 8.9713 4.31011 8.98291C3.32871 9.75382 2.11639 10.172 0.868416 10.17C0.647098 10.1696 0.425998 10.1561 0.206299 10.1294C1.47411 10.9427 2.94891 11.3747 4.45519 11.3739Z"
+          fill="#243054"></path>
+      </svg>
+
+      <svg
+        width="14"
+        height="15"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 448 512"
+        ><path
+          d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+        ></path>
+      </svg>
+
+      <svg
+        width="14"
+        height="14"
+        viewBox="0 0 14 14"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M12.7455 0.133911H1.23627C0.684944 0.133911 0.239136 0.569168 0.239136 1.1073V12.664C0.239136 13.2022 0.684944 13.6401 1.23627 13.6401H12.7455C13.2968 13.6401 13.7453 13.2022 13.7453 12.6667V1.1073C13.7453 0.569168 13.2968 0.133911 12.7455 0.133911ZM4.24613 11.6431H2.24132V5.19608H4.24613V11.6431ZM3.24373 4.31765C2.60007 4.31765 2.0804 3.79798 2.0804 3.15697C2.0804 2.51595 2.60007 1.99628 3.24373 1.99628C3.88474 1.99628 4.40441 2.51595 4.40441 3.15697C4.40441 3.79534 3.88474 4.31765 3.24373 4.31765ZM11.7484 11.6431H9.74619V8.5093C9.74619 7.76277 9.733 6.79993 8.70422 6.79993C7.66224 6.79993 7.50396 7.61505 7.50396 8.45654V11.6431H5.50442V5.19608H7.42483V6.07714H7.4512C7.71763 5.57066 8.37184 5.03516 9.34523 5.03516C11.3738 5.03516 11.7484 6.36995 11.7484 8.1057V11.6431Z"
+          fill="#243054"></path>
+      </svg>
+    </div>
+  </div>
+</footer>
+<script>
+  document.querySelector("#copyrightYear").textContent = new Date()
+    .getFullYear()
+    .toString();
+</script>
