--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
-
+import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Habesha.">
-	<main>
-		
-	</main>
+  <main></main>
 </Layout>
-
