--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,15 +3,17 @@ import logo from "../assets/headerleft-logo.png";
 import laf from "../assets/button-laf.png";
 ---
 
-<header class="py-8 flex flex-row bg-rose-wood justify-between items-center">
+<header
+  class="py-8 px-4 md:px-12 flex flex-row bg-rose-wood justify-between items-center"
+>
   <div class="w-2/12">
     <img class="w-6/12" src={logo} alt="" />
   </div>
 
   <nav
-    class="text-sm space-x-3 flex text-white mr-2 font-thin md:justify-between"
+    class="text-sm md:text-3xl md:space-x-11 space-x-3 flex text-white mr-2 font-thin md:justify-between"
   >
-    <a href="">About</a>
+    <a href="src/pages/about.astro">About</a>
     <a href="">Menu</a>
     <a href="">Venue</a>
     <a href="">Events</a>
