--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,119 @@
 ---
 import Layout from "@layouts/Layout.astro";
+import image1 from "../assets/image1.png";
+import vector1 from "../assets/vector1.png";
+import vector2 from "../assets/vector2.png";
+import image2 from "../assets/image2.png";
+import image3 from "../assets/image3.png";
+import image4 from "../assets/image4.png";
+import image5 from "../assets/image5.png";
+import image6 from "../assets/image6.png";
+import profile from "../assets/profile.png";
+import line from "../assets/line.png";
+import cube from "../assets/cube-vector.png";
 ---
 
 <Layout title="Habesha.">
-  <main></main>
+  <main class="bg-rose-wood font-seriif">
+    <section class="container-1 flex py-6 px-2 md:px-12 h-full">
+      <div
+        class="bg-[url('../src/assets/image10.png')] bg-center bg-no-repeat bg-cover sm:basis-6/12 text-white pt-9 pr-2 md:flex flex-col justify-between md:h-[900px] md:-mt-72 md:space-y-8"
+      >
+        <h1
+          class="bg-rose-wood md:bg-blend-luminosity text-3xl md:text-[88px] font-thin leading-none md:mt-80 md:w-[130%] md:tracking-wide md:z-40"
+        >
+          Taste the authenctic saudi Cuisine
+        </h1>
+        <p class="text-xs font-thin md:text-2xl">
+          Among the best Saudi chef's in the world, <br /> serving you something
+          beyond flavor
+        </p>
+        <div class="">
+          <button
+            class="border-sheen-gold border-2 md:w-32 cursor-pointer items-center p-3 text-sheen-gold"
+          >
+            Our Menu</button
+          >
+        </div>
+        <img class="w-20" src={vector2} alt="" />
+      </div>
+      <div class="basis-6/12 hidden sm:block md:-ml-20">
+        <img class="w-6 h-6 float-right" src={vector1} alt="" />
+        <img class="" src={image1} alt="" />
+      </div>
+    </section>
+
+    <!-- beginning of the second section -->
+    <section class="container-2 md:p-14 flex justify-between">
+      <div class="image w-1/3">
+        <img class="" src={image2} alt="" />
+      </div>
+      <div
+        class="content bg-[url('../src/assets/image10.png')] bg-center bg-no-repeat bg-cover text-white flex flex-col w-2/3 md:space-y-8 pl-8 justify-between"
+      >
+        <h1 class="md:text-4xl">
+          A distinctive dining destination inspired by the culture.
+        </h1>
+        <p class="text-xl">Experience a Ballad old town of Jeddah vibes</p>
+
+        <button class="bg-sheen-gold p-3 w-36 text-rose-wood">
+          Our Venue</button
+        >
+
+        <div class="md:flex hidden md:space-x-8">
+          <img class="w-36 h-40" src={image3} alt="" />
+          <img class="w-36 h-40" src={image4} alt="" />
+          <img class="w-36 h-40" src={image5} alt="" />
+        </div>
+        <div class="flex flex-row justify-around">
+          <img class="w-[400px] h-0.5" src={line} alt="" />
+          <img class="w-16 h-16" src={cube} alt="" />
+        </div>
+      </div>
+    </section>
+
+    <sction
+      class="container-3 md:p-14 flex md:flex-row flex-col justify-between"
+    >
+      <div class="bg-sheen-gold p-11 md:w-[561px] md:h-[400px]">
+        <svg
+          aria-hidden="true"
+          class="w-3 h-3"
+          viewBox="0 0 24 27"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          ><path
+            d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
+            fill="currentColor"></path>
+        </svg>
+        <blockquote>
+          <p class="text-xl text-space-cadet">
+            "You can't go wrong with Chicken Mandi, I had it twice. The chicken
+            was cooked perfectly, juicy & soft (usually mandi chicken is a bit
+            dry). I would defiantly recommend it."
+          </p>
+        </blockquote>
+        <div class="flex justify-between pt-20 items-end">
+          <p class="text-space-cadet">Khalid Al Dawsry <br />Jedah, Saudi</p>
+          <img class="" src={profile} alt="" />
+        </div>
+      </div>
+      <div class="md:h-[400px] md:w-[769px]">
+        <img class="w-full h-full" src={image6} alt="" />
+      </div>
+    </sction>
+
+    <!-- before footer container -->
+    <section
+      class="container-4 p-11 bg-[url('../src/assets/image7.png')] bg-center bg-no-repeat bg-cover md:h-[500px] flex flex-col items-center"
+    >
+      <img class="w-24 h-28" src={vector1} alt="" />
+
+      <h1 class="text-white text-6xl p-11">
+        A Unique menu that reflects the true essence of the Saudi cuisine
+      </h1>
+
+      <button class="bg-sheen-gold p-3"> Our Menu</button>
+    </section>
+  </main>
 </Layout>
