menu and About pages

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,11 +11,11 @@ import laf from "../assets/button-laf.png";
   </div>
 
   <nav
-    class="text-sm md:text-3xl md:space-x-11 space-x-3 flex text-white mr-2 font-thin md:justify-between"
+    class="text-sm md:text-3xl md:space-x-11 space-x-3 flex text-white mr-2 font-thin md:justify-between z-40"
   >
-    <a href="src/pages/about.astro">About</a>
-    <a href="">Menu</a>
-    <a href="">Venue</a>
+    <a href="/about">About</a>
+    <a href="/menu">Menu</a>
+    <a href="/index">Venue</a>
     <a href="">Events</a>
   </nav>
   <div class="flex">
