--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import cube from "../assets/cube-vector.png";
   <main class="bg-rose-wood font-seriif">
     <section class="container-1 flex py-6 px-2 md:px-12 h-full">
       <div
-        class="bg-[url('../src/assets/image10.png')] bg-center bg-no-repeat bg-cover sm:basis-6/12 text-white pt-9 pr-2 md:flex flex-col justify-between md:h-[900px] md:-mt-72 md:space-y-8"
+        class="sm:basis-6/12 text-white pt-9 pr-2 md:flex flex-col justify-between md:space-y-8"
       >
         <h1
           class="bg-rose-wood md:bg-blend-luminosity text-3xl md:text-[88px] font-thin leading-none md:mt-80 md:w-[130%] md:tracking-wide md:z-40"
@@ -35,6 +35,7 @@ import cube from "../assets/cube-vector.png";
             Our Menu</button
           >
         </div>
+
         <img class="w-20" src={vector2} alt="" />
       </div>
       <div class="basis-6/12 hidden sm:block md:-ml-20">
