--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,15 +11,15 @@ import laf from "../assets/button-laf.png";
   </div>
 
   <nav
-    class="text-sm md:text-3xl md:space-x-11 space-x-3 flex text-white mr-2 font-thin md:justify-between z-40"
+    class="text-sm md:text-3xl md:space-x-11 space-x-3 flex text-white mr-2 font-thin md:justify-between"
   >
     <a href="/about">About</a>
     <a href="/menu">Menu</a>
     <a href="/index">Venue</a>
     <a href="">Events</a>
   </nav>
-  <div class="flex">
-    <button class="border-0 bg-sheen-gold text-xs p-1">BOOK NOW</button>
-    <img class="h-[47px]" src={laf} alt="" />
+  <div class="">
+    <button class="border-0 bg-sheen-gold text-xs p-1 md:p-4">BOOK NOW</button>
+    <!-- <img class="h-[47px]" src={laf} alt="" /> -->
   </div>
 </header>
