changed display from insivible to hidden

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -104,7 +104,7 @@ import cube from "../assets/cube-vector.png";
         </div>
         <hr class="dark-cyan invisible lg:visible" />
       </div>
-      <div class="md:h-[555px] md:w-[769px] hidden lg:visible">
+      <div class="md:h-[555px] md:w-[769px] hidden lg:block">
         <img class="w-full h-full" src={image6} alt="" />
       </div>
     </section>
