--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Footer from "@components/Footer.astro";
+import Footer from "@components/footer.astro";
 import Header from "@components/Header.astro";
 import "../global.css";
 
